--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "node-esapi": "0.0.1",
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "libxmljs": "^0.19.1",
+    "multer": "^1.4.1"
   },
   "comments": {
     "//": "a9 insecure components"
